# automata-checkers

./: .gitignore  CMakeLists.txt  README.md
docker/: docker-entrypoint
lab1/: CMakeLists.txt  main.cpp  run
lab1/App/: CVisualizerService.cpp  CVisualizerService.h  IGraphVisualizer.h  IInputOutputAdapter.h  IInputOutputAdapter.hpp
lab1/Infrastructure/CSV/: CInputOutputAdapter.cpp  CInputOutputAdapter.h
lab1/Infrastructure/Graphviz/: CGraphVisualizer.cpp  CGraphVisualizer.h
src/Infrastructure/CSV/: CInputOutputAdapter.cpp  CInputOutputAdapter.h
